# SmartPointer-Final

./: .gitignore  CMakeLists.txt  main.cpp
Interface/: Interface.cpp  Interface.h
Sequences/: LinkedList.h
SmartPointer/: SmartPointer.h
Tests/: TestFunc.cpp  TestLoad.cpp  TestView.cpp  Tests.cpp  Tests.h  testFunc.cpp  testLoad.cpp  testView.cpp  test_structure.h  tests.h
